syntax = "proto3";
package io.casperlabs.comm.discovery;

import "io/casperlabs/comm/discovery/node.proto";

message Ping {
  Node   sender         = 1;
}

message Pong {
}

message Lookup {
  bytes  id     = 1;
  Node   sender = 2;
}

message LookupResponse {
    repeated Node nodes = 1;
}

service KademliaRPCService {
  rpc SendPing (Ping) returns (Pong) {}
  rpc SendLookup (Lookup) returns (LookupResponse) {}
}
